[tool.poetry]
name = "tiled-3d-landscape"
version = "0.4.0"
description = ""
authors = ["elliot-100 <3186037+elliot-100@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
